--- a/mysite.html
+++ b/mysite.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
       <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <title>MySite</title>
       <script src="https://kit.fontawesome.com/a7b69aa32a.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="mysite.css" />
@@ -13,6 +14,11 @@
                 <a href="#">
                     <img class="logo" src="img/logo.png"></img>
                 </a>
+                
+                <!-- ハンバーガーメニューの表示・非表示を切り替えるチェックボックス -->
+                <input id="drawer_input" class="drawer_hidden" type="checkbox">
+                <!-- ハンバーガーアイコン -->
+                <label for="drawer_input" class="drawer_open"><span></span></label>
                 
                 <nav>
                     <ul class="nav-list">
